app.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:

  MyS3Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: !Sub '${AWS::StackName}-bucket'
      AccessControl: PublicRead
      WebsiteConfiguration:
        IndexDocument: index.html
        ErrorDocument: 404.html

  MyS3BucketPolicy:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket: !Ref MyS3Bucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: PublicReadGetObject
            Effect: Allow
            Principal: '*'
            Action: 's3:GetObject'
            Resource: !Sub 'arn:aws:s3:::${MyS3Bucket}/*'

  ServerForNodeJs:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      KeyName: ubuntu.pem
      ImageId: ami-04a81a99f5ec58529  # Ubuntu, 24.04 LTS
      SecurityGroupIds:
        - !Ref NodeJsSG
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y gcc-c++ make
          curl -sL https://rpm.nodesource.com/setup_14.x | bash -
          yum install -y nodejs
          cd /home/ec2-user
          git clone https://github.com/franklynux/node-js-app.git
          cd your-app
          npm install
          npm start

  NodeJsSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
